fix spacing between cancel and submit buttons on the add daily page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -343,3 +343,7 @@
   margin-top: 1rem;
   /* margin-bottom: 1rem; */
  }
+ 
+ #cancel {
+  margin-right: 0.5rem;
+ }
